--- a/src/components/Random.css
+++ b/src/components/Random.css
@@ -1,5 +1,5 @@
-.greeting {
-  border: 1px solid black;
+.random-integer {
+    border: 1px solid black;
   margin: 5px;
   display: flex;
   flex-direction: row;
@@ -7,5 +7,5 @@
   flex-direction: column;
   font-size: 14px;
   padding: 5px;
-  width: 200px;
+  width: 500px;
 }
