--- a/src/components/boxColor.css
+++ b/src/components/boxColor.css
@@ -1,4 +1,4 @@
-.greeting {
+.boxColor {
   border: 1px solid black;
   margin: 5px;
   display: flex;
@@ -7,5 +7,5 @@
   flex-direction: column;
   font-size: 14px;
   padding: 5px;
-  width: 200px;
+  width: 300px;
 }
