--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,13 @@
 #id-card {
+    display: flex;
+}
+
+.box {
     border: 2px solid black;
     margin: 10px;
     padding: 5px;
-    display: flex;
 }
 
 #info {
     margin: 0px 10px 0px 10px;
-}
-
-.greeting {
-    border: 2px solid black;
-    margin: 10px;
-    padding: 5px;
 }
