--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,67 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.idCard {
+  border: 1px solid black;
+  display: flex;
+}
+
+.idCard img {
+  margin: 5px;
+}
+
+.idCard p {
+  margin: 5px 0;
+  font-size: 12px;
+}
+
+.greetings {
+  border: 1px solid black;
+  margin: 5px
+}
+
+.random {
+  border: 1px solid black;
+  margin: 5px
+}
+
+.cardImage {
+  display: flex;
+  flex-direction: row;
+}
+
+
+.driverCard {
+  background-color: #3251cd;
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  margin: 5px
+}
+
+.driverImage {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-right: 10px;
+  object-fit: cover;
+}
+
+.driverInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.driverInfo h2 {
+  margin: 5px 0;
+}
+
+.driverInfo p {
+  margin: 5px 0;
+}
