--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,10 @@
 #info {
     margin: 0px 10px 0px 10px;
 }
+
+.color-box {
+    border: 2px solid black;
+    margin: 10px;
+    padding: 30px;
+    text-align: center;
+}
