added styles (still in progress)

--- a/src/components/IdCard.css
+++ b/src/components/IdCard.css
@@ -1,3 +1,12 @@
 .IdCard {
-  border: 1px black;
+  display: flex;
+  align-items: center;
+}
+
+.IdCard img {
+  margin: 10px;
+}
+
+.text p {
+  line-height: 0.3;
 }
