--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,11 @@ h4 {
 .content {
     padding-left: 5px;
 }
+
+.idioma {
+    border-radius: 2px;
+    padding: 10px;
+    border: solid 2px black;
+    text-align: left;
+    margin: 13px;
+}
