--- a/src/App.css
+++ b/src/App.css
@@ -17,14 +17,23 @@
 h4 {
     margin: 0;
 }
+
+h1 {
+    margin-left: 13px;
+}
 .content {
     padding-left: 5px;
 }
 
-.idioma {
+.idioma, .random {
     border-radius: 2px;
     padding: 10px;
     border: solid 2px black;
     text-align: left;
     margin: 13px;
+}
+.box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
