--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,12 @@
   display: flex;
   flex-direction: row;
   justify-content: left;
- 
+
+
+  
+}
+.IdCard {
+  border: 1px solid black;
+  margin-bottom: 10px;
+  display: flex;
 }
