--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,9 @@
     font-size: 20px;
 
 }
+.randomNumber{
+    border: 3px solid black;
+    font-size: 20px;
+    margin: 6px;
+    padding: 2px;
+}
