--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,61 @@
   border: 1px solid black;
   text-align: center;
 }
+
+.cards {
+  display: flex;
+  gap: 20px;
+}
+
+.credit-card {
+  padding: 5px;
+  border-radius: 15px;
+  width: 350px;
+  height: 200px;
+  display: flex;
+  position: relative
+}
+
+.credit-card img {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  height: 20px;
+}
+
+.card-text {
+  position: absolute;
+  top: 35px;
+  padding: 20px;
+}
+
+.card-text h1 {
+  font-weight: normal;
+  padding-left: 20px;
+}
+
+.driver-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #455EB5;
+  color: white;
+  border-radius: 15px;
+  width: 600px;
+  gap: 10px;
+  padding: 5px;
+}
+
+.driver-card img {
+  width: 80px;
+  height: 80px;
+  border-radius: 160px;
+}
+
+.driver-info {
+  margin: 20px;
+}
+
+.driver-info h3, .driver-info p{
+  margin: 0;
+}
