--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,25 @@
-.idCard {
+.id-card {
   display: flex;
+  align-items: center;
   border: 1px solid black;
   margin-bottom: 10px;
+  margin: 10px;
   padding: 10px;
+  font-family: Arial, sans-serif;
 }
 
-.idCard-image img {
+.id-image img {
   height: 100px;
   margin-right: 20px;
 }
 
-.idCard-info p {
+.id-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.id-info p {
   margin: 5px;
+  line-height: 10px;
 }
