--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.App {
+  min-width: 300px;
+}
+  
 h1 {
   margin: 15px;
   color: grey;
@@ -35,6 +39,13 @@ h1 {
   margin: 10px;
   line-height: 20px;
   font-weight: 600;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.random-value {
+  margin: 10px;
   border: 1px solid black;
   border-radius: 10px;
   padding: 10px;
