--- a/src/App.css
+++ b/src/App.css
@@ -1,56 +1,29 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
 #container {
   display: flex;
   border: 2px solid black;
+  gap: 10px;
   padding: 10px;
   margin: 10px;
   width: 800px;
   height: 200px;
 }
 
-.text{
-  padding: 10px;
-  margin: 0px;
+#greetings {
+  border: 2px solid black;
+  padding: 5px;
+  margin: 10px;
+}
+
+#random{
+  border: 2px solid black;
+  padding: 5px;
+  margin: 10px;
+}
+
+#colors {
+  border: 2px solid black;
+  padding: 5px;
+  margin: 10px;
+  font-size: 10px;
+  text-align: center;
 }
