--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,12 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  gap: 20px;
+  gap: 10px;
   max-width: 100%;
+}
+
+.rating-container {
+  font-size: 42px;
+  color: black;
+  margin-top: 20px;
 }
