--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   min-width: 300px;
   margin: 10px;
 }
-  
+
 h1 {
   color: grey;
 }
@@ -64,7 +64,7 @@ h1 {
   border-radius: 10px;
   padding: 20px;
   margin-top: 10px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   font-family: Arial, sans-serif;
 }
 
@@ -101,7 +101,7 @@ h1 {
 .driver-card {
   display: flex;
   align-items: center;
-  justify-content: flex-start; 
+  justify-content: flex-start;
   background-color: #404fed;
   border-radius: 8px;
   padding: 10px 5px;
