--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,36 @@ img {
 h1 {
   margin: 0;
 }
+
+.credit-card {
+  width: 300px;
+  height: 180px;
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  color: white;
+  font-family: "Arial", sans-serif;
+  margin-bottom: 16px;
+}
+
+.credit-card-type img {
+  width: 60px;
+}
+
+.credit-card-number {
+  font-size: 1.2em;
+  letter-spacing: 2px;
+}
+
+.credit-card-details {
+  display: flex;
+  justify-content: space-between;
+}
+
+.credit-card-owner {
+  margin-top: 10px;
+  font-size: 0.9em;
+}
