--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+/* personal css reset */
+* {
+  box-sizing: border-box;
+  margin    : 0;
+  padding   : 0;
+}
+
+/* Original index.css */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
