--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,5 @@
   display       : flex;
   flex-direction: column;
   align-items   : center;
-  padding       : .4rem;
+  padding : var(--space-default);
 }
