iteration 4: component BoxColor

--- a/src/assets/css/IDCard.css
+++ b/src/assets/css/IDCard.css
@@ -3,7 +3,7 @@
   padding      : var(--space-default);
   margin-bottom: var(--space-default);
   width        : var(--width-app);
-  height       : 20vw;
+  height : 10rem;
 
   display: flex;
 }
