--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,8 @@
   align-items   : center;
   padding : var(--space-default);
 }
+.credit-card-container {
+  display       : flex;
+  flex-direction: row;
+  gap           : var(--space-default);
+}
