--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,8 @@
     display: flex;
     flex-direction: row;
     align-items: left;
-    justify-content:left
-    width: 95%;
-    border: 1px solid black;
+    justify-content:left;
+    border: 2px solid black;
     margin: 5px;
     padding: 5px;
 }
@@ -15,10 +14,18 @@
     flex-direction: column;
     justify-content: flex-start;
     margin: 0 5px;
-    line-height: 1em;
+    line-height: 1.2em;
 }
 
-.id-card-details p{
+p{
     margin: 0;
     padding: 0;
+}
+
+.greetings {
+    border: 2px solid black;
+    margin: 5px;
+    padding: 10px 10px;
+    line-height: 1em;
+    font-size: 2em;
 }
