--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .id-card {
+
     height: 120px;
     display: flex;
     flex-direction: row;
@@ -28,4 +29,70 @@ p{
     padding: 10px 10px;
     line-height: 1em;
     font-size: 2em;
+}
+
+.random {
+    border: 2px solid black;
+    margin: 5px;
+    padding: 10px 10px;
+    line-height: 1em;
+    font-size: 2em;
+}
+
+.box-color {
+    border: 2px solid black;
+    margin: 5px;
+    padding: 50px 25px;
+    text-align: center;
+    line-height: 1.3em;
+    font-size: 2em;
+}
+
+.credit-card-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.credit-card {
+    position: relative; /* Add this line */
+    width: 400px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-content: end;
+    justify-content: flex-end;
+    border: 0px solid black;
+    margin: 5px;
+    padding: 10px;
+    border-radius: 15px;
+    font-size: 1.2em;
+    text-align: left;
+}
+
+.credit-card div{
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 5px 10px;
+}
+
+.number {
+    font-size: 2.5em;
+    text-align: center;
+}
+
+.exp-date{
+    align-items: start;
+}
+
+.owner {
+    text-align: left;
+}
+
+.type img {
+    position: absolute; /* Add this line */
+    top: 15px; /* Adjust as needed */
+    right: 15px; /* Adjust as needed */
+    width: 100px;
 }
