--- a/src/App.css
+++ b/src/App.css
@@ -1,98 +1,99 @@
 .id-card {
-
-    height: 120px;
-    display: flex;
-    flex-direction: row;
-    align-items: left;
-    justify-content:left;
-    border: 2px solid black;
-    margin: 5px;
-    padding: 5px;
+  height: 120px;
+  display: flex;
+  flex-direction: row;
+  align-items: left;
+  justify-content: left;
+  border: 2px solid black;
+  margin: 5px;
+  padding: 5px;
 }
 
 .id-card-details {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin: 0 5px;
-    line-height: 1.2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 0 5px;
+  line-height: 1.2em;
 }
 
-p{
-    margin: 0;
-    padding: 0;
+p {
+  margin: 0;
+  padding: 0;
 }
 
 .greetings {
-    border: 2px solid black;
-    margin: 5px;
-    padding: 10px 10px;
-    line-height: 1em;
-    font-size: 2em;
+  border: 2px solid black;
+  margin: 5px;
+  padding: 10px 10px;
+  line-height: 1em;
+  font-size: 2em;
 }
 
 .random {
-    border: 2px solid black;
-    margin: 5px;
-    padding: 10px 10px;
-    line-height: 1em;
-    font-size: 2em;
+  border: 2px solid black;
+  margin: 5px;
+  padding: 10px 10px;
+  line-height: 1em;
+  font-size: 2em;
 }
 
 .box-color {
-    border: 2px solid black;
-    margin: 5px;
-    padding: 50px 25px;
-    text-align: center;
-    line-height: 1.3em;
-    font-size: 2em;
+  border: 2px solid black;
+  margin: 5px;
+  padding: 50px 25px;
+  text-align: center;
+  line-height: 1.3em;
+  font-size: 2em;
 }
 
 .credit-card-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 .credit-card {
-    position: relative; /* Add this line */
-    width: 400px;
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    align-content: end;
-    justify-content: flex-end;
-    border: 0px solid black;
-    margin: 5px;
-    padding: 10px;
-    border-radius: 15px;
-    font-size: 1.2em;
-    text-align: left;
+  position: relative; /* Add this line */
+  width: 400px;
+  min-width: 400px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-content: end;
+  justify-content: flex-end;
+  border: 0px solid black;
+  margin: 5px;
+  padding: 10px;
+  border-radius: 15px;
+  font-size: 1.2em;
+  text-align: left;
 }
 
-.credit-card div{
-    display: flex;
-    text-align: center;
-    flex-direction: column;
-    justify-content: space-between;
-    margin: 5px 10px;
+.credit-card div {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 5px 10px;
 }
 
 .number {
-    font-size: 2.5em;
-    text-align: center;
+  font-size: 2.5em;
+  text-align: center;
+  padding-bottom: 6px;
 }
 
-.exp-date{
-    align-items: start;
+.exp-date {
+  align-items: start;
 }
 
 .owner {
-    text-align: left;
+  text-align: left;
 }
 
 .type img {
-    position: absolute; /* Add this line */
-    top: 15px; /* Adjust as needed */
-    right: 15px; /* Adjust as needed */
-    width: 100px;
+  position: absolute; /* Add this line */
+  top: 15px; /* Adjust as needed */
+  right: 15px; /* Adjust as needed */
+  height: 40px;
 }
