--- a/src/components/CredirCard/CreditCard.css
+++ b/src/components/CredirCard/CreditCard.css
@@ -16,6 +16,7 @@
 img {
     height: 40px;
     width: auto; 
+    margin-bottom: 20px;
 }
 
 .card-info {
@@ -24,7 +25,7 @@ img {
 }
 
 .card-number {
-    font-size: 8vh;
+    font-size: 6.5vh;
     text-align: center;
 }
 
