--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.card {
+  border: 1px solid black;
+  margin: 20px;
+}
+
+.card img {
+  float: left;
+  width: 120px;
+  height: 120px;
+  margin-right: 20px;
+}
+.card > .text-block {
+  display: flex;
+  flex-direction: column;
+}
+.card p {
+  line-height: 0.5;
+  margin: 8px 0;
+  color: #333;
+}
+.box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  width: 100%;
+  height: 300px;
+  margin: 20px 0;
+  border: 1px solid black;
+  color: #fff;
+  font-weight: bold;
 }
