--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,43 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.border{
+ border:2px black;
+ border-left: 10;
+ align-items: center;
+ padding-left: 10px;
+ padding-right: 10px;
+ border-style: solid;
+ padding: 20px;
+ margin-bottom: 10px;
+
+}
+.Allignment {
+  display: flex;
+  align-items: center;  
+  position: relative;
+  
+}
+
+.Allignment img {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  margin-right: 0px; 
+  padding-left: 10px;
+  padding-right: 30px;
+}
+.text-container {
+  display: flex;
+  flex-direction: row;
+  align-items:center;  
+ position: absolute;
+ padding-left: 10px;
+}
+.Creditcard{
+  display: flex;
+  flex-direction:column;
+  padding-left: 20px;
+padding-bottom: 10px;
+}
