--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1 {
+  margin: 10px;
+}
+
+.idcard-container {
+  border: 2px solid black;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+  margin: 10px;
+  padding: 5px;
+}
+
+.idcard-container>img {
+  max-height: 100%;
+  margin: 5px 5px;
+}
+
+.id-text {
+  margin: 0;
+}
+
+.id-text>p {
+  margin: 0;
+}
