--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,48 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+p,
+h2 {
+  margin: 0;
+}
+
+
+.App {
+  max-width: 1200px;
+  margin: 0 auto 3rem auto;
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.card {
+  border: 2px solid #777777;
+  background-color: #f5f5f5;
+  border-radius: .75rem;
+  padding: 1rem;
+  display: flex;
+  gap: 1rem;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.credit-card {
+  display: flex;
+  gap: 3rem;
+  justify-content: center;
+}
+
+.credit-card .bank-card {
+  padding: 1rem;
+  border-radius: .75rem;
+  width: 280px;
+  font-size: 18px;
+}
