--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,45 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1 {
+  text-align: center;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.id-card {
+  display: flex;
+  border: 1px solid #000;
+  padding: 10px;
+  margin: 10px 20px;
+  align-items: center;
+  display: flex;
+}
+
+.id-card img {
+  width: 100px;
+  height: auto;
+  margin-right: 20px;
+}
+
+.id-card p {
+  margin: 4px 0;
+}
+
+.border {
+  border: 1px solid black;
+  margin: 10px 20px;
+  padding: 5px;
+}
+
+.box-color {
+  padding: 20px;
+  margin: 10px 0;
+  border: 1px solid black;
+  text-align: center;
+  color: white;
+  font-weight: bold;
 }
