--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,12 @@
   }
 }
 
+#credit-cards {
+  display: flex;
+  flex-direction: row;
+  /* border: 1px black solid; */
+}
+
 .color-card {
   display: flex;
   height: 100px;
@@ -29,8 +35,42 @@
 }
 
 .credit-card {
+  display: flex;
+  flex-direction: column;
   border-radius: 10px;
-  border: 1px black solid;
   width: 400px;
-  height: 200px;
+  border: 1px black solid;
+  height: 220px;
+  padding: 1.3rem;
+  font-size: 1.3rem;
+  margin: 1rem;
+}
+
+.card-number {
+  text-align: center;
+  margin-top: 4rem;
+  font-size: 2.5rem;
+  letter-spacing: 0.2rem;
+  margin-bottom: 1rem;
+  /* border: 1px black solid; */
+}
+
+.card-row {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 0;
+  height: 2rem;
+  align-items: center;
+  box-sizing: border-box;
+  /* border: 1px black solid; */
+}
+.card-row p {
+  /* border: 1px black solid; */
+}
+
+.card-owner {
+  margin-top: 0;
+  padding: 0 1px;
+  box-sizing: border-box;
+  /* border: 1px black solid; */
 }
