--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,7 @@ code {
   justify-content: flex-start;
   align-items: center;
   gap: 20px;
-  padding: 32px 32px 32px 400px;
+  padding: 32px 32px 32px 30%;
 
   img {
     border-radius: 50%;
