--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.CreditCard{
+  max-width: 300px;
+  min-height: 11rem;
+}
+
+.CreditCard img {
+  width: 4rem;
+}
+
+.DriverCard {
+  background-color: #455eb5;
+  box-sizing: border-box;
+}
+
+.DriverCard img{
+  object-fit: cover;
+  object-position: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
