--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.id-card {
+  display: flex;
+  gap: 12px;
+  border: 1px solid #000;
+  padding: 12px;
+  margin-bottom: 12px;
+  align-items: center;
+}
+
+.id-card img {
+  width: 150px;
+  height: auto;
+  object-fit: cover;
+}
